--- a/VirtualTourist/VirtualTourist/View/Base.lproj/Main.storyboard
+++ b/VirtualTourist/VirtualTourist/View/Base.lproj/Main.storyboard
@@ -11,25 +11,40 @@
         <!--Photo Album-->
         <scene sceneID="WTJ-N3-4fN">
             <objects>
-                <collectionViewController id="hc2-Za-76f" sceneMemberID="viewController">
+                <collectionViewController id="hc2-Za-76f" customClass="CollectionViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="YLH-Ho-xRx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vJ2-nF-ezF">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vJ2-nF-ezF">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jLI-bS-qxW">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="jLI-bS-qxW" customClass="CollectionViewCell" customModule="VirtualTourist" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="N44-Jc-xb0">
                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t8E-tj-U8e">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="t8E-tj-U8e" secondAttribute="bottom" id="Sdx-Rg-KOO"/>
+                                        <constraint firstItem="t8E-tj-U8e" firstAttribute="top" secondItem="N44-Jc-xb0" secondAttribute="top" id="bAB-eR-Wia"/>
+                                        <constraint firstAttribute="trailing" secondItem="t8E-tj-U8e" secondAttribute="trailing" id="icW-Jj-KsE"/>
+                                        <constraint firstItem="t8E-tj-U8e" firstAttribute="leading" secondItem="N44-Jc-xb0" secondAttribute="leading" id="rVf-bY-0Wk"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
+                                <size key="customSize" width="128" height="128"/>
+                                <connections>
+                                    <outlet property="imageView" destination="t8E-tj-U8e" id="gDj-xZ-9fP"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -39,11 +54,18 @@
                     </collectionView>
                     <toolbarItems>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="d7a-om-nQe"/>
-                        <barButtonItem title="New Collection" id="YJx-C6-tVR"/>
+                        <barButtonItem title="New Collection" id="YJx-C6-tVR">
+                            <connections>
+                                <action selector="requestNewCollection:" destination="hc2-Za-76f" id="9Ff-IS-z2h"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="PII-AU-feV"/>
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="Photo Album" id="AOG-dm-GNb"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="flowLayout" destination="vJ2-nF-ezF" id="5G5-Sc-oXg"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bra-Y3-SMk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -61,7 +83,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <gestureRecognizers/>
                                 <connections>
-                                    <outletCollection property="gestureRecognizers" destination="LHr-Hz-MP1" appends="YES" id="V48-CS-Vsz"/>
+                                    <outletCollection property="gestureRecognizers" destination="Wm6-6t-bjv" appends="YES" id="eeJ-un-kJf"/>
                                 </connections>
                             </mapView>
                         </subviews>
@@ -81,11 +103,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hga-ng-DIt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="LHr-Hz-MP1">
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="Wm6-6t-bjv">
                     <connections>
-                        <action selector="mapTap:" destination="ilz-iy-jzB" id="k62-A5-OQh"/>
+                        <action selector="mapTap:" destination="ilz-iy-jzB" id="kW7-Fo-rYG"/>
                     </connections>
-                </tapGestureRecognizer>
+                </pongPressGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="3326.0869565217395" y="73.660714285714278"/>
         </scene>
