--- a/VirtualTourist/VirtualTourist/View/Base.lproj/Main.storyboard
+++ b/VirtualTourist/VirtualTourist/View/Base.lproj/Main.storyboard
@@ -22,6 +22,10 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
+                        <activityIndicatorView key="backgroundView" autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" id="JQI-kn-Puw">
+                            <rect key="frame" x="0.0" y="-88" width="414" height="896"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </activityIndicatorView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="jLI-bS-qxW" customClass="CollectionViewCell" customModule="VirtualTourist" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -64,6 +68,7 @@
                     <navigationItem key="navigationItem" title="Photo Album" id="AOG-dm-GNb"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="JQI-kn-Puw" id="Z8p-Tg-60k"/>
                         <outlet property="flowLayout" destination="vJ2-nF-ezF" id="5G5-Sc-oXg"/>
                     </connections>
                 </collectionViewController>
